; ModuleID = '/home/carl/AnghaBench/libgit2/tests/commit/extr_signature.c_test_commit_signature__pos_and_neg_zero_offsets_dont_match.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/commit/extr_signature.c_test_commit_signature__pos_and_neg_zero_offsets_dont_match.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [42 x i8] c"Test User <test@test.tt> 1461698487 -0000\00", align 1
@.str.1 = private unnamed_addr constant [42 x i8] c"Test User <test@test.tt> 1461698487 +0000\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_commit_signature__pos_and_neg_zero_offsets_dont_match() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = call i32 @git_signature_from_buffer(i32** %1, i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0))
  %4 = call i32 @cl_git_pass(i32 %3)
  %5 = call i32 @git_signature_from_buffer(i32** %2, i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.1, i64 0, i64 0))
  %6 = call i32 @cl_git_pass(i32 %5)
  %7 = load i32*, i32** %1, align 8
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @git_signature__equal(i32* %7, i32* %8)
  %10 = icmp ne i32 %9, 0
  %11 = xor i1 %10, true
  %12 = zext i1 %11 to i32
  %13 = call i32 @cl_assert(i32 %12)
  %14 = load i32*, i32** %1, align 8
  %15 = call i32 @git_signature_free(i32* %14)
  %16 = load i32*, i32** %2, align 8
  %17 = call i32 @git_signature_free(i32* %16)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_signature_from_buffer(i32**, i8*) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i32 @git_signature__equal(i32*, i32*) #1

declare dso_local i32 @git_signature_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
